# text_exctraction

./: .gitignore  README.md  main.py  pyproject.toml  structure.json  text.txt
